manifests/ns-discourse/recipes/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: discourse
  labels:
    app: postgresql
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9187"
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: postgresql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: discourse
  labels:
    app: postgresql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: "postgres:10"
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgresql
          containerPort: 5432
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready --host $POD_IP
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready --host $POD_IP
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        volumeMounts:
        - name: init-d-volume
          mountPath: /docker-entrypoint-initdb.d/
        - name: data
          mountPath: /var/lib/postgresql/data/pgdata
          subPath: postgresql-db
      - name: metrics
        image: "wrouesnel/postgres_exporter:v0.8.0"
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: metrics
          containerPort: 9187
        resources:
          requests:
            cpu: 30m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 64Mi
      volumes:
      - name: init-d-volume
        projected:
          sources:
          - configMap:
              name: postgres-init-config
              items:
              - key: init-discourse.sh
                path: init-discourse.sh
      - name: data
        persistentVolumeClaim:
          claimName: postgresql

---
# 이 네트워크 정책을 활성화하면 ELB를 통해 Redis에 접근하는 기능도 막힌다.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgresql-allow
  namespace: discourse
spec:
  podSelector:
    matchLabels:
      app: postgresql
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: discourse
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
